# moos-ivp-baxterdp

./: .gitignore  .gitignore~
lib/: libBHV_SimpleWaypoint.dylib
missions/: .gitignore
missions/alder/: alder.bhv  alder.bhv~  alder.moos++
missions/lab_07/bravo_loiter_uuv_surface/: bravo.bhv  bravo.moos
missions/lab_08/henry_gilda_auto_refuel/: meta_shoreside.moos  meta_vehicle.bhv
missions/primefactor/: .gitignore  .gitignore~  primefactor.moos  primefactor.moos~
missions/xrelay/: #xrelay.moos#
src/: CMakeLists.txt
src/pCommunicationAngle_baxterdp/: CMakeLists.txt  CommunicationAngle_baxterdp.cpp  CommunicationAngle_baxterdp.h  CommunicationAngle_baxterdp_Info.cpp  CommunicationAngle_baxterdp_Info.h  Data.cpp  Data.h  main.cpp  pCommunicationAngle_baxterdp.moos
src/pGenPath/: CMakeLists.txt  CompPath.cpp  CompPath.h  GenPath.cpp  GenPath.h  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.cpp~  Odometry.h  Odometry.h~  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointParse.cpp  PointParse.h  main.cpp
src/pPrimeFactor/: CMakeLists.txt  PrimeEntry.cpp  PrimeEntry.h  PrimeEntry.h~  PrimeFactor.cpp  PrimeFactor.cpp~  PrimeFactor.h  PrimeFactor.h~  PrimeFactor_Info.cpp  PrimeFactor_Info.h  main.cpp  pPrimeFactor.moos
